# PredFluor

./: .gitignore  Prediction.ipynb  README.md  environment.yml  pyproject.toml
predfluor/: __init__.py  prediction_script.py  test.py  utils.py
